configured commit signing

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,7 @@
 [user]
 	email = 15628173+mustaphazorgati@users.noreply.github.com
 	name = Mustapha Zorgati
+	signingKey = 90368EAAFE98F631F9AF9615BFF92FDA34CDC6FB
 [color]
 	ui = true
 [core]
@@ -14,6 +15,12 @@
 [alias]
   tree = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%C(bold blue)<%an>%Creset' --abbrev-commit
 	change-commits = "!f() { VAR=$1; OLD=$2; NEW=$3; shift 3; git filter-branch --env-filter \"if [[ \\\"$`echo $VAR`\\\" = '$OLD' ]]; then export $VAR='$NEW'; fi\" $@; }; f "
+[gpg]
+	program = gpg
+[commit]
+	gpgsign = true
+[tag]
+	forceSignAnnotated = true
 [init]
 	defaultBranch = main
 [filter "lfs"]
