automatically scaling display on autostart

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -326,6 +326,7 @@ mode "$mode_system" {
 ##################################################################################
 
 exec --no-startup-id nm-applet
+exec --no-startup-id $HOME/.screenlayout/laptop.sh
 exec --no-startup-id blueman-applet
 exec --no-startup-id i3-msg workspace $ws1
 exec --no-startup-id google-chrome-stable
