--- a/.config/i3/config
+++ b/.config/i3/config
@@ -335,6 +335,7 @@ mode "$mode_system" {
 ##################################################################################
 
 
+exec --no-startup-id nitrogen --restore
 exec --no-startup-id nm-applet
 exec --no-startup-id $HOME/.screenlayout/laptop.sh
 exec --no-startup-id blueman-applet
