--- a/.config/i3/config
+++ b/.config/i3/config
@@ -56,9 +56,10 @@ bindsym Ctrl+$alt+h exec rofi -modi "clipboard:greenclip print" -show clipboard 
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pamixer -u -i 5 && $refresh_i3status
+#bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% &10v& $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pamixer -u -d 5 && $refresh_i3status
+bindsym XF86AudioMute exec --no-startup-id pamixer -t && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 ##################################################################################
@@ -150,7 +151,7 @@ floating_modifier $mod
 bindsym $mod+Shift+q kill
 
 for_window [class="Nm-connection-editor"] floating enable border normal
-
+for_window [class="Pavucontrol"] floating enable
 ##################################################################################
 #                                                                                #
 ## WORKSPACES                                                                   ##
