--- a/.config/i3/config
+++ b/.config/i3/config
@@ -338,19 +338,26 @@ mode "$mode_system" {
 #                                                                                #
 ##################################################################################
 
+# DAEMONS
+exec --no-startup-id dunst
 exec --no-startup-id greenclip daemon
 exec --no-startup-id nitrogen --restore
+# start SSH agent if not already running
+exec --no-startup-id ! pgrep -u "$USER" ssh-agent >/dev/null && ssh-agent > "$XDG_RUNTIME_DIR/ssh-agent.env"
+
+# APPLETS
 exec --no-startup-id nm-applet
-exec --no-startup-id $HOME/.screenlayout/laptop.sh
 exec --no-startup-id blueman-applet
+
+# APPS
 exec --no-startup-id google-chrome-stable
 exec --no-startup-id spotify
 exec --no-startup-id telegram-desktop
 exec --no-startup-id signal-desktop
 exec --no-startup-id slack
-exec --no-startup-id dunst
-# start SSH agent if not already running
-exec --no-startup-id ! pgrep -u "$USER" ssh-agent >/dev/null && ssh-agent > "$XDG_RUNTIME_DIR/ssh-agent.env"
+exec --no-startup-id gitkraken
+exec --no-startup-id $HOME/.screenlayout/laptop.sh
+
 # add primary ssh key to keyring (floating sticky window)
 exec --no-startup-id i3-msg workspace ssh; urxvt -name ssh-add -e bash -c 'source "$XDG_RUNTIME_DIR/ssh-agent.env" >/dev/null && ssh-add' && i3-msg workspace $ws1; i3-msg [class="Signal"] focus; i3-msg [class="Slack"] focus
 
