--- a/.config/i3/config
+++ b/.config/i3/config
@@ -220,9 +220,6 @@ bindsym $mod+Ctrl+Shift+j move workspace to output up
 bindsym $mod+Ctrl+Shift+k move workspace to output down
 bindsym $mod+Ctrl+Shift+l move workspace to output right
 
-# layout
-exec --no-startup-id i3-msg workspace $ws1; i3-msg append_layout "$HOME/.config/i3/workspace-1.json"
-
 # Open applications on specific workspaces
 for_window [class="Spotify"] move --no-auto-back-and-forth container to workspace $ws0
 assign [class="Spotify"] $ws0
@@ -356,9 +353,7 @@ exec --no-startup-id signal-desktop
 exec --no-startup-id slack
 exec --no-startup-id gitkraken
 exec --no-startup-id $HOME/.screenlayout/laptop.sh
-
-# add primary ssh key to keyring (floating sticky window)
-exec --no-startup-id i3-msg workspace ssh; urxvt -name ssh-add -e ssh-add && i3-msg workspace $ws1; i3-msg [class="Signal"] focus; i3-msg [class="Slack"] focus
+exec --no-startup-id $HOME/.config/i3/autostart.sh
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
