--- a/.config/i3/config
+++ b/.config/i3/config
@@ -64,7 +64,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 
 ##################################################################################
 #                                                                                #
-## FLOATING TERMINALS                                                           ##
+## FLOATING                                                                     ##
 #                                                                                #
 ##################################################################################
 
@@ -87,6 +87,10 @@ for_window [instance="ssh-add"] resize set 800 300
 for_window [instance="ssh-add"] border pixel 2
 for_window [instance="ssh-add"] sticky enable
 for_window [instance="ssh-add"] focus
+
+for_window [class="zoom"] floating enable
+no_focus [class="zoom" title="^zoom"]
+for_window [class="zoom" title="^Zoom( Meeting)?$"] floating disable
 
 ##################################################################################
 #                                                                                #
@@ -158,15 +162,21 @@ for_window [class="Pavucontrol"] floating enable
 #                                                                                #
 ##################################################################################
 
+# fa-regular fa-comments
 set $ws1 1:
+# fa-brands fa-chrome
 set $ws2 2:
+# fa-regular fa-code
 set $ws3 3:
+# fa-brands fa-gitkraken
 set $ws4 4:
-set $ws5 5
+# fa-regular fa-video
+set $ws5 5:
 set $ws6 6
 set $ws7 7
 set $ws8 8
 set $ws9 9
+# fa-brands fa-spotify
 set $ws0 0:
 
 # switch to workspace
@@ -222,7 +232,6 @@ bindsym $mod+Ctrl+Shift+l move workspace to output right
 
 # Open applications on specific workspaces
 for_window [class="Spotify"] move --no-auto-back-and-forth container to workspace $ws0
-assign [class="Spotify"] $ws0
 assign [class="Slack"] $ws1
 assign [class="TelegramDesktop"] $ws1
 assign [class="Signal"] $ws1
@@ -230,6 +239,7 @@ assign [class="Google-chrome"] $ws2
 assign [class="jetbrains-idea"] $ws3
 assign [class="Code"] $ws3
 assign [class="GitKraken"] $ws4
+assign [class="zoom"] $ws5
 
 ##################################################################################
 #                                                                                #
@@ -340,6 +350,7 @@ mode "$mode_system" {
 exec --no-startup-id dunst
 exec --no-startup-id greenclip daemon
 exec --no-startup-id nitrogen --restore
+exec --no-startup-id picom -b --experimental-backends
 
 # APPLETS
 exec --no-startup-id nm-applet
@@ -370,7 +381,7 @@ bar {
   tray_output primary
   strip_workspace_numbers yes
   status_command i3status
-  font pango:System San Francisco Display 11
+  font pango:System San Francisco Display 11, pango:FontAwesome 11
 
   colors {
     background $bg-color
