--- a/.config/i3/config
+++ b/.config/i3/config
@@ -349,7 +349,6 @@ mode "$mode_system" {
 # DAEMONS
 exec --no-startup-id dunst
 exec --no-startup-id greenclip daemon
-exec --no-startup-id nitrogen --restore
 exec --no-startup-id picom -b --experimental-backends
 
 # APPLETS
@@ -364,6 +363,8 @@ exec --no-startup-id signal-desktop
 exec --no-startup-id slack
 exec --no-startup-id gitkraken
 exec --no-startup-id $HOME/.screenlayout/laptop.sh
+
+# AUTOSTART SCRIPT
 exec --no-startup-id $HOME/.config/i3/autostart.sh
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
