--- a/.config/i3/config
+++ b/.config/i3/config
@@ -357,6 +357,7 @@ exec --no-startup-id blueman-applet
 
 # APPS
 exec --no-startup-id google-chrome-stable
+exec --no-startup-id intellij-idea-ultimate-edition
 exec --no-startup-id spotify
 exec --no-startup-id telegram-desktop
 exec --no-startup-id signal-desktop
