--- a/.config/zoomus.conf
+++ b/.config/zoomus.conf
@@ -1,5 +1,5 @@
 [General]
-Em5uwmw4znF7OsPkE7IZDgSUYzLpsPZtrFRZK4p8pXs%23=1659777984
+Em5uwmw4znF7OsPkE7IZDgSUYzLpsPZtrFRZK4p8pXs%23=1659990308
 GeoLocale=system
 PhoneLiveTrans_Window_Mode_dwxfu2i6qza3wpis1q_gqa=0
 SensitiveInfoMaskOn=true
@@ -10,7 +10,7 @@ captureHDCamera=true
 chatListPanelLastWidth=230
 conf.webserver=https://eu01web.zoom.us
 conf.webserver.vendor.default=https://zoom.us
-currentMeetingId=
+currentMeetingId=66152855484
 deviceID=84:A9:38:BF:EB:0B
 enable.host.auto.grab=true
 enableAlphaBuffer=true
@@ -27,12 +27,12 @@ fake.version=
 flashChatTime=0
 forceEnableTrayIcon=true
 forceSSOURL=
-hNQ9BtgJvaX55CNAEQZEE1lAI6exT3dfrV2XQiOrPZ4%23=1659777984
+hNQ9BtgJvaX55CNAEQZEE1lAI6exT3dfrV2XQiOrPZ4%23=1659990323
 host.auto.grab.interval=10
 isTransCoding=false
 logLevel=info
 newMeetingWithVideo=true
-odAUX2OdbM72Zdm8lgivh4MopvJNdaz8iIVkbyNYQlA%23=1659777986
+odAUX2OdbM72Zdm8lgivh4MopvJNdaz8iIVkbyNYQlA%23=1659990309
 playSoundForNewMessage=false
 scaleFactor=1
 shareBarTopMargin=0
@@ -53,24 +53,24 @@ lastCodeType=0
 wrapMode=0
 
 [Hb0Xuk4LLUrs6K6rkEVfby]
-ZEO%2BIE0Qr300WiYPAVQk%23=1659777986
+ZEO%2BIE0Qr300WiYPAVQk%23=1659990309
 
 [QKrC4ZbtmtN]
-K0iVbCjSrrN%2Bk5JLCp6tnOKh2ULE3ac%23=1659572202
+K0iVbCjSrrN%2Bk5JLCp6tnOKh2ULE3ac%23=1660572724
 
 [QmDaFgJk66dV96y2AeURI943Nur]
-z5lRGxlXXO%2B4PZs%23=1659777986
+z5lRGxlXXO%2B4PZs%23=1659990309
 
 [ao8fhFtuFWUPjCxp42Pi9ECGB3V]
-b\3Dk1ilp9vYkho%23=1659777984
+b\3Dk1ilp9vYkho%23=1659990311
 
 [chat.recent]
 recentlast.session=
 
 [uVuBCucvVo3cG%2BJ4]
-Q13ZqGZ1MjX\5llgjLvXPNATa4%23=1659777986
+Q13ZqGZ1MjX\5llgjLvXPNATa4%23=1659990309
 
 [zoom_new_im]
 is_landscape_mode=true
-main_frame_pixel_pos_narrow="636,1032"
-main_frame_pixel_pos_wide="786,579"
+main_frame_pixel_pos_narrow="478,1054"
+main_frame_pixel_pos_wide="1918,1054"
