--- a/.config/i3/config
+++ b/.config/i3/config
@@ -367,7 +367,7 @@ exec --no-startup-id spotify
 exec --no-startup-id telegram-desktop
 exec --no-startup-id signal-desktop
 exec --no-startup-id gitkraken
-exec --no-startup-id $HOME/.screenlayout/laptop.sh
+exec --no-startup-id $HOME/.screenlayout/native.sh
 
 # AUTOSTART SCRIPT
 exec --no-startup-id $HOME/.config/i3/autostart.sh
