--- a/.config/i3/config
+++ b/.config/i3/config
@@ -94,6 +94,9 @@ for_window [class="zoom" title="^Zoom( Meeting)?$"] floating disable
 
 for_window [class="VirtualBox Manager"] floating enable
 for_window [class="VirtualBox Machine"] fullscreen enable
+for_window [class="Nitrogen"] floating enable
+for_window [class="Nm-connection-editor"] floating enable
+for_window [class="Pavucontrol"] floating enable
 
 ##################################################################################
 #                                                                                #
@@ -157,8 +160,6 @@ floating_modifier $mod
 # kill focused window
 bindsym $mod+Shift+q kill
 
-for_window [class="Nm-connection-editor"] floating enable border normal
-for_window [class="Pavucontrol"] floating enable
 ##################################################################################
 #                                                                                #
 ## WORKSPACES                                                                   ##
