--- a/.config/nitrogen/bg-saved.cfg
+++ b/.config/nitrogen/bg-saved.cfg
@@ -7,3 +7,8 @@ bgcolor=#000000
 file=/home/mustapha/.config/nitrogen/novatec.jpg
 mode=0
 bgcolor=#000000
+
+[xin_2]
+file=/home/mustapha/.config/nitrogen/novatec.jpg
+mode=0
+bgcolor=#000000
