updated citrix client config

--- a/.ICAClient/All_Regions.ini
+++ b/.ICAClient/All_Regions.ini
@@ -290,6 +290,7 @@ ZFile=
 ZFilePlayback=*
 AllowMultiStream=*
 DisableCLXMTP=*
+SmartCardCryptographicRedirection=*
 
 ;
 ; These settings control aspects of the displayed GUI
@@ -304,6 +305,16 @@ OutputMode=*
 IgnoreErrors=
 DisableXRender=*
 ConnectionBar=*
+ToolbarVersion=*
+ToolbarButtonClose=*
+ToolbarButtonDevices=*
+ToolbarButtonFullscreen=*
+ToolbarButtonMinimize=*
+ToolbarButtonPin=*
+ToolbarButtonPreferences=*
+ToolbarButtonShortcuts=*
+ToolbarButtonSwitchDesktop=*
+WCAGModeKeyCombination=*
 
 ;
 ; This setting configures whether webkit version check is performed
@@ -312,6 +323,8 @@ ConnectionBar=*
 UseCefBrowser=*
 CefEnableMediaDevices=*
 CefCachePath=
+CefCacheSizeBytes=*
+CefUseInMemoryCache=*
 CefUserAgent=
 
 ;
@@ -386,7 +399,8 @@ AppProtectionKeyLogging=*
 RemoveICAFile=*
 Launcher=
 LaunchSource=
-
+SSOnLogonType=
+AADSSOAccessToken=
 
 ;
 ; These settings control how the client handles running multiple applications
@@ -529,22 +543,6 @@ ProxyPassword=
 ProxyTimeout=*
 WpadHost=
 
-AltProxyType=
-AltProxyAutoConfigURL=
-AltProxyBypassList=
-AltProxyHost=
-AltProxyPort=*
-AltProxyUsername=
-AltProxyPassword=
-AltProxyTimeout=*
-
-ICASOCKSProtocolVersion=
-ICASOCKSProxyHost=
-ICASOCKSProxyPortNumber=*
-ICASOCKSrfc1929Username=
-ICASOCKSrfc1929Password=
-ICASOCKSTimeout=*
-
 ProxyUseDefault=*
 ProxyFallback=*
 ProxyFavorIEConnectionSetting=*
@@ -678,6 +676,7 @@ BypassSetLED=
 ServerDoesMultiMod=*
 ;set true to enable Bloomberg selective redirection
 BloombergRedirection=*
+FullScreenShortcutSupport=*
 ;
 ; These settings control the mouse settings
 ;
@@ -972,6 +971,7 @@ LogoffDesktopThroTWI=*
 TWIEmulateSystray=*
 TWICleanupTimer=*
 TWIFlashMethod=*
+TWIPreserveWindow=*
 TWISwitchDelay=
 ;
 ; These settings handle access to client smartcard devices
@@ -1033,6 +1033,11 @@ InvertCursorMode=*
 DPIMatchingEnabled=*
 Cursor32bitSupport=*
 IgnoreXErrors=
+GrayCursorEnabled=*
+EnableTwOssViewer=*
+MultiMonitorPnPEnabled=*
+MonitorLayoutEventTimeout=*
+DesktopSessionResizeEventTimeout=*
 ;
 ; These settings control third party ICA client extensions
 ;
@@ -1070,6 +1075,7 @@ BUCC=
 ;
 [Virtual Channels\Control]
 CREnabled=*
+AllowBidirectionalContentRedirection=*
 
 [Virtual Channels\HDXRealTime]
 HDXWebCamEnabled=*
