--- a/.ICAClient/canonicalization.ini
+++ b/.ICAClient/canonicalization.ini
@@ -75,6 +75,7 @@ PersistentCacheMinBitmap=PersistentCacheMinBitmap
 TW2StopwatchMinimum=TW2StopwatchMinimum
 SetTWIFocusOnTitled=SetTWIFocusOnTitled
 WinSetting=WinSetting
+EnableTwOssViewer=EnableTwOssViewer
 
 [ClientDrive]
 DisableDrives=DisableDrives
