--- a/.config/i3/config
+++ b/.config/i3/config
@@ -90,6 +90,8 @@ for_window [instance="ssh-add"] border pixel 2
 for_window [instance="ssh-add"] sticky enable
 for_window [instance="ssh-add"] focus
 
+for_window [class="pdfmerger"] floating enable
+
 for_window [class="zoom"] floating enable
 no_focus [class="zoom" title="^zoom"]
 for_window [class="zoom" title="^Zoom( Meeting)?$"] floating disable
