--- a/.config/nitrogen/bg-saved.cfg
+++ b/.config/nitrogen/bg-saved.cfg
@@ -1,14 +1,14 @@
 [xin_0]
-file=/home/mustapha/.config/nitrogen/novatec.jpg
-mode=0
+file=/home/mustapha/.config/nitrogen/acai.jpg
+mode=5
 bgcolor=#000000
 
 [xin_1]
-file=/home/mustapha/.config/nitrogen/novatec.jpg
-mode=0
+file=/home/mustapha/.config/nitrogen/acai.jpg
+mode=5
 bgcolor=#000000
 
 [xin_2]
-file=/home/mustapha/.config/nitrogen/novatec.jpg
-mode=0
+file=/home/mustapha/.config/nitrogen/acai.jpg
+mode=5
 bgcolor=#000000
