--- a/.config/i3/config
+++ b/.config/i3/config
@@ -370,13 +370,13 @@ exec --no-startup-id blueman-applet
 
 # APPS
 exec --no-startup-id google-chrome-stable
-exec --no-startup-id intellij-idea-ultimate-edition
+#exec --no-startup-id intellij-idea-ultimate-edition
 exec --no-startup-id spotify
 exec --no-startup-id telegram-desktop
 exec --no-startup-id signal-desktop
 exec --no-startup-id teams
 exec --no-startup-id slack
-exec --no-startup-id gitkraken
+#exec --no-startup-id gitkraken
 exec --no-startup-id nextcloud
 exec --no-startup-id $HOME/.screenlayout/laptop.sh
 
